fix problem with the background on small screen in hero section

--- a/sass/abstracts/_functions.scss
+++ b/sass/abstracts/_functions.scss
@@ -6,6 +6,7 @@
     // font-size: 5rem;
     color: $color1;
     line-height: 140%;
+
     span {
       display: $span;
       color: $color2;
@@ -15,17 +16,34 @@
 
 //----------------LAYOUT-----------------
 
+@mixin backImage($deg, $point1, $point2, $path) {
+  background-image: linear-gradient($deg,
+      rgba($color-honey, 0.8) $point1,
+      rgba($color-white, 0.8) $point2,
+      rgba($color-white, 0.8) 100%,
+      transparent 50%),
+      $path;
+      
+}
+
 @mixin layout($path, $bc-size, $bc-pos) {
   position: relative;
   background-image: linear-gradient(58deg,
-      rgba(255, 255, 255, 1) 62%,
+      rgba($color-white, 1) 62%,
       rgba($color-honey-2, 0.9) 62%,
       rgba($color-honey-2, 0.9) 100%,
       transparent 50%),
-    //Obraz Mabel Amber z Pixabay
     $path;
   background-size: $bc-size;
   background-position: $bc-pos;
   background-repeat: no-repeat;
-  height: calc(200vh - 5px); // this help to keep slice background in the same place
+  // height: calc(200vh - 5px); // this help to keep slice background in the same place
+}
+
+@mixin layoutHero($path, $bc-size, $bc-pos ) {
+  position: relative;
+ @include backImage(58deg, 62%, 62%, $path); 
+  background-size: $bc-size;
+  background-position: $bc-pos;
+  background-repeat: no-repeat; 
 }
