--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,16 +1,12 @@
-.wrapper {
+.wrapper--hero {
   position: relative;
   // <a href="https://www.freepik.com">designed by Racool_Studio - Freepik.com</a>
-  background-image: linear-gradient(58deg,
-      rgba(238, 207, 144, .8) 62%,
-      rgba($color-white-2, 0.8) 62%,
-      rgba($color-white-2, 0.8) 100%,
-      transparent 50%),
-    url(../../src/images/hero_bg.jpg);
-  // background-size: 100%;
-  background-size: cover;
-  background-position: bottom;
-  background-repeat: no-repeat;
+  @include layoutHero(url(../../src/images/hero_bg.jpg), cover, bottom);
+
+//TODO fix problem with ipad pro resolution
+  @media (max-width: $large)  {
+    @include backImage(72deg, 72%, 72%, url(../../src/images/hero_bg.jpg));
+  }
 
   @media (max-width: $large) {
     flex-direction: column;
@@ -25,7 +21,6 @@
   justify-items: start;
 
   &__title {
-    // font-size: 6.5rem;
     line-height: 130%;
     color: $color-gray;
   }
@@ -43,16 +38,12 @@
     grid-column: 2/3;
     font-family: $font-secondary;
     color: $color-gray;
-    // letter-spacing: 5%;
-    // font-size: 2.4rem;
     font-weight: 400;
-    // line-height: 36px;
-    // letter-spacing: 0.05em;
+
   }
 
   &__btn {
     grid-column: 2/3;
-
     @include btn;
     @include btn--yellow;
     @include shadow2;
